# sonic-gesture

./: CMakeLists.txt  COPYRIGHT.txt  Installation.md  ProjectHome.md  README.md  README.txt  links.md  sonicgesture-qmake.pro  sonicgesture.icns  sonicgesture.nsi  sonicgesture.pro
code/cpp/finder/: CMakeLists.txt  finder.cpp  finder.h  limb.h  main.cpp  skin.cpp  train.h
code/cpp/finder/src/: capture.cpp  finder.cpp  finder.h  hand.cpp  hand.h  limb.cpp  limb.h  run.cpp  settings.h  settings.h.in  skin.cpp  skin.h  tools.cpp  tools.h  train.cpp
debian/: menu  (+3 more)
sonic-gesture/: CMakeLists.txt  Doxyfile  README.txt  graph.txt  resources.qrc
sonic-gesture/data/examples/: README
sonic-gesture/data/movies/: sync.sh
sonic-gesture/data/movies/uva/: bas1_labels.txt  bas3_labels.txt  gijs3_labels.txt  gosia2_labels.txt  hamdi3_labels.txt  ivo4_labels.txt  michael1_labels.txt  ork1_labels.txt  ork2_labels.txt  sil1_labels.txt  sil3_labels.txt
sonic-gesture/data/sets/gijs_kamer_intout28/: labels.txt
sonic-gesture/data/sets/gijs_uva_inout28/: labels2.txt
sonic-gesture/debian/: files
sonic-gesture/doc/html/: blob_8cpp.html  blob_8h_source.html  bodypart_8cpp.html  capture_8cpp.html  class_blob-members.html  class_body_part-members.html  class_body_parts-members.html  class_body_parts.html  class_capture-members.html  class_matcher-members.html  class_matcher.html  class_skin_finder.html  class_stabilizer-members.html  class_stabilizer.html  classes.html  combiner_8cpp.html  combiner_8h_source.html  common_8h.html  common_8h_source.html  files.html  finder_8cpp.html  functions_func.html  globals_func.html  histogram_8cpp.html  histogram_8h.html  histogram_8h_source.html  index.html  matcher_8cpp.html  matcher_8h.html  matcher_8h_source.html  skinfinder_8cpp.html  source_8h.html  source_8h_source.html  tools_8h.html
sonic-gesture/doc/html/search/: all_61.html  all_62.html  all_65.html  all_66.html  all_67.html  all_6c.html  all_6d.html  all_6e.html  all_70.html  all_72.html  all_74.html  classes_66.html  classes_68.html  classes_73.html  defines_68.html  defines_73.html  files_66.html  files_6d.html  functions_63.html  functions_66.html  functions_68.html  functions_6d.html  functions_75.html  functions_7e.html  search.js  typedefs_63.html  variables_62.html  variables_66.html  variables_6d.html  variables_70.html  variables_72.html  variables_73.html  variables_74.html
sonic-gesture/doc/latex/: annotated.tex  blob_8cpp.tex  blob_8h.tex  bodypart_8cpp.tex  bodypart_8h.tex  capture_8cpp.tex  class_body_part.tex  class_finder.tex  class_matcher.tex  class_source.tex  combiner_8h.aux  combiner_8h.tex  common_8h.aux  doxygen.sty  files.tex  finder_8cpp.tex  histogram_8cpp.aux  matcher_8cpp.tex  refman.aux  refman.tex  settings_8h.tex  skinfinder_8h.tex  test_8cpp.tex  tools_8cpp.aux  tools_8h.tex
sonic-gesture/qt/: mainwindow.ui  resources.qrc
sonic-gesture/src/: audio.cpp  audio.h  blob.cpp  blob.h  bodypart.cpp  bodypart.h  capture.cpp  capture.h  cmake.h.in  combiner.cpp  combiner.h  common.h  dumpFeatures.cpp  extractor.cpp  finder.cpp  finder.h  hand.cpp  hand.h  histogram.cpp  histogram.h  kalmantest.cpp  limb.cpp  limb.h  loader.cpp  loader.h  main.cpp  mainwindow.cpp  mainwindow.h  matcher.cpp  matcher.h  qcvimage.cpp  qcvimage.h  qttest.h  recorder.cpp  recorder.h  run.cpp  settings.cpp  settings.h  settings.h.in  settingscreen.cpp  (+14 more)
sonic-gesture/tools/: autoextrac.py  stitcher.py  transcode.py
trunk/code/cpp/finder/: CMakeLists.txt  README  settings.h  skin.h  tools.h  train.cpp
trunk/code/cpp/finder/src/: capture.cpp  common.h  finder.cpp  finder.h  limb.cpp  limb.h  run.cpp  settings.h  settings.h.in  skin.cpp  skin.h  tools.cpp  tools.h  train.cpp
trunk/sonic-gesture/: CMakeLists.txt  planning.txt
trunk/sonic-gesture/data/movies/: sync.sh
trunk/sonic-gesture/data/movies/uva/: arjan1_labels.txt  chu1_labels.txt  gosia3_labels.txt  hamdi1_labels.txt  (+10 more)
trunk/sonic-gesture/debian/: install
trunk/sonic-gesture/doc/html/: annotated.html  blob_8h.html  bodypart_8cpp.html  bodypart_8h.html  bodypart_8h_source.html  class_blob-members.html  class_blob.html  class_body_part.html  class_body_parts.html  class_capture.html  class_combiner-members.html  class_combiner.html  class_finder-members.html  class_finder.html  class_histogram-members.html  class_histogram.html  class_matcher.html  class_skin_finder-members.html  class_source-members.html  class_source.html  classes.html  combiner_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_type.html  matcher_8h.html  settings_8h.html  settings_8h_source.html  skinfinder_8cpp.html  skinfinder_8h.html  skinfinder_8h_source.html  source_8cpp.html  source_8h_source.html  test_8cpp.html  tools_8cpp.html  tools_8h.html  tools_8h_source.html
trunk/sonic-gesture/doc/latex/: blob_8cpp.tex  blob_8h.aux  bodypart_8cpp.aux  class_blob.tex  class_body_parts.tex  class_capture.aux  class_capture.tex  class_combiner.tex  class_finder.aux  class_histogram.tex  class_matcher.aux  class_skin_finder.tex  class_source.aux  class_source.tex  class_stabilizer.aux  class_stabilizer.tex  common_8h.tex  files.tex  finder_8cpp.aux  finder_8cpp.tex  histogram_8h.aux  matcher_8h.tex  skinfinder_8cpp.tex  skinfinder_8h.tex  source_8cpp.aux  source_8cpp.tex  source_8h.aux  source_8h.tex  test_8cpp.aux  tools_8cpp.tex  tools_8h.tex
trunk/sonic-gesture/qt/: mainwindow.ui  resources.qrc
trunk/sonic-gesture/src/: application.cpp  audio.cpp  audio.h  blob.cpp  blob.h  bodypart.cpp  bodypart.h  capture.cpp  capture.h  combiner.cpp  combiner.h  common.h  dumpFeatures.cpp  extractor.cpp  finder.cpp  finder.h  hand.cpp  histogram.cpp  histogram.h  kalmantest.cpp  labeler.cpp  labeler.h  limb.cpp  limb.h  loader.cpp  loader.h  mainwindow.cpp  mainwindow.h  matcher.cpp  matcher.h  qcvimage.cpp  qcvimage.h  qttest.cpp  recorder.cpp  recorder.h  run.cpp  settings.cpp  settings.h  settings.h.in  settingscreen.h  (+11 more)
trunk/sonic-gesture/test/: stabilizer_unittest.cpp
trunk/sonic-gesture/tools/: autoextrac.py
(+928 files in other folders)
